Horizontal scrollable behaviour added to code text.

--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="10"
+            android:textColor="@color/grey_text"
             android:padding="20dp"
             android:gravity="top|left"
             app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount"
