--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/major_background"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ablProfileScreenAppBar"
@@ -110,7 +114,7 @@
             <View
                 android:id="@+id/vTerms"
                 android:layout_width="match_parent"
-                android:background="@color/major_background"
+                android:background="@color/grey_text_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTermsConditions"
@@ -125,22 +129,38 @@
             <View
                 android:id="@+id/vPrivacy"
                 android:layout_width="match_parent"
-                android:background="@color/major_background"
+                android:background="@color/grey_text_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvPrivacyPolicy"
                 android:layout_height="1dp"/>
             <TextView
-                android:id="@+id/tvFeedback"
+                android:id="@+id/tvReport"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/vPrivacy"
+                android:padding="20dp"
+                android:text="Report"/>
+            <View
+                android:id="@+id/vReport"
+                android:layout_width="match_parent"
+                android:background="@color/grey_text_background"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvReport"
+                android:layout_height="1dp"/>
+
+            <TextView
+                android:id="@+id/tvFeedback"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/vReport"
                 android:padding="20dp"
                 android:text="Feedback"/>
             <View
                 android:id="@+id/vFeedback"
                 android:layout_width="match_parent"
-                android:background="@color/major_background"
+                android:background="@color/grey_text_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvFeedback"
@@ -155,7 +175,7 @@
             <View
                 android:id="@+id/vShare"
                 android:layout_width="match_parent"
-                android:background="@color/major_background"
+                android:background="@color/grey_text_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvShare"
@@ -170,7 +190,7 @@
             <View
                 android:id="@+id/vRate"
                 android:layout_width="match_parent"
-                android:background="@color/major_background"
+                android:background="@color/grey_text_background"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvRateUs"
@@ -186,5 +206,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
