--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -7,45 +7,83 @@
     android:background="@color/chapter_background"
     tools:context=".ExampleActivity">
 
-    <TextView
-        android:id="@+id/tvTitle"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:hint="Example Title"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@id/cvBottomItems"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvExampleText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Example Text"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
-    <TextView
-        android:id="@+id/tvCode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvExampleText"
-        android:hint="Example Code"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="20dp"
+                android:hint="Example Title"
+                android:padding="10dp"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvExampleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:hint="Example Text"
+                android:padding="10dp"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/feedback_background"
+                android:layout_marginRight="20dp"
+                app:layout_constraintTop_toBottomOf="@id/tvExampleText">
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:fillViewport="true">
+                    <TextView
+                        android:id="@+id/tvCode"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Example Code"
+                        android:paddingBottom="5dp"
+                        android:scrollHorizontally="true"
+                        android:textSize="20sp"
+                        />
+                </HorizontalScrollView>
+
+            </LinearLayout>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </ScrollView>
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cvBottomItems"
         android:layout_width="0dp"
-        app:cardBackgroundColor="@color/white"
         android:layout_height="60dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:cardBackgroundColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintRight_toRightOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -56,39 +94,39 @@
                 android:id="@+id/ivShare"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:contentDescription="Share"
+                android:layout_marginLeft="25dp"
                 android:clickable="true"
+                android:contentDescription="Share"
+                android:padding="18dp"
                 android:src="@drawable/ic_outline_share_24"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginLeft="25dp"
-                android:padding="18dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/ivFavourite"
-                android:clickable="true"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:contentDescription="Favourite"
                 android:layout_marginLeft="25dp"
+                android:clickable="true"
+                android:contentDescription="Favourite"
                 android:padding="18dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_baseline_favorite_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/ivShare"
-                android:src="@drawable/ic_baseline_favorite_24"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/bToNextExample"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginRight="20dp"
                 android:text="Next"
                 android:textAllCaps="false"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
