--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -225,16 +225,17 @@
             app:layout_constraintTop_toBottomOf="@id/ivWrite" />
 
         <TextView
+            android:id="@+id/tvContribute"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
-
             android:layout_marginBottom="15dp"
             android:background="@drawable/contribute_background"
             android:gravity="center"
             android:text="CONTRIBUTE"
+            android:clickable="true"
             android:textColor="@color/primaryColor"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
