--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -32,12 +32,11 @@
             android:padding="20dp"
             android:gravity="top|left"
             app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount"
-            android:layout_margin="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/feedback_background"
             android:hint="Let us know why are you leaving.\nWe will try to improve." />
-
-
-
 
     <Button
         android:id="@+id/bDeleteAccount"
