--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -256,6 +256,8 @@
             android:layout_marginBottom="15dp"
             android:background="@drawable/contribute_background"
             android:gravity="center"
+            android:textStyle="bold"
+            android:letterSpacing="0.1"
             android:text="CONTRIBUTE"
             android:clickable="true"
             android:textColor="@color/primaryColor"
